crates/vihaco-parser/tests/compile_errors/pattern_with_legacy_head.rs
// SPDX-FileCopyrightText: 2026 The vihaco Authors
// SPDX-License-Identifier: MIT

use vihaco_parser::Parse;

#[derive(Parse)]
#[syntax_class(instruction)]
#[head]
enum Instruction {
    Halt,
}

fn main() {}
